deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: test
  labels:
    app: nginx   #此处的标签deploy 的label不能和matchLabels一样，否则会报error: no objects passed to apply
spec:
  replicas: 2
  selector:
    matchLabels:
      project: test
  template:
    metadata:
      labels:
        project: test
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
