svc_cluster.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-clusterip
  namespace: test
spec:
  type: ClusterIP
  selector:
    project: test
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
