ingress-second.yaml
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: service-nginx
# spec:
#   selector:
#     app: nginx
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 80


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: aws-ingress-second
 labels:
   app: aws-ingress-second
 annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip #instance or ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":8080}]'
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
 #namespace: {NAMESPACE}
spec:
 rules:
   #- host: "nginx.example.com"  #指定路由规则，即携带什么主机头才进行路由转发，比如nginx.example.com
    - http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: service-nginx
               port:
                 number: 80
